Modify admin/salon/salon_reservations views

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -37,6 +37,7 @@ Layout/IndentationWidth:
   Exclude:
     - 'app/models/salon.rb'
     - 'app/controllers/*'
+    - 'app/controllers/admin/*'
 
 Layout/IndentationConsistency:
   Enabled: false
