--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,74 +1,54 @@
-version: 2 # CircleCI 2.0 を使用します
-jobs: # ステップの集合
-  build: # Workflows を使用しない実行では、エントリポイントとして `build` ジョブが必要
-    parallelism: 3 # このジョブのインスタンスを 3つ並列実行します
-    docker: # Docker でステップを実行します
-      - image: circleci/ruby:2.4.2-jessie-node # このイメージをすべての `steps` が実行されるプライマリコンテナとして使用します
-        environment: # プライマリコンテナの環境変数
-          BUNDLE_JOBS: 3
-          BUNDLE_RETRY: 3
-          BUNDLE_PATH: vendor/bundle
-          PGHOST: 127.0.0.1
-          PGUSER: root
+version: 2
+jobs:
+  build:
+    docker:
+      - image: circleci/ruby:2.4.1-node
+        environment:
           RAILS_ENV: test
-      - image: circleci/postgres:9.5-alpine # データベースイメージ
-        environment: # データベースの環境変数
-          POSTGRES_USER: root
-          POSTGRES_DB: beauty-match_test
-          POSTGRES_PASSWORD: ""
-          BUNDLER_VERSION: 2.0.2
+      - image: circleci/postgres:9.4.12-alpine
+        # 環境情報を追加
+        environment:
+          - POSTGRES_USER=root
+          - POSTGRES_DB=beauty-match_test
+    # ディレクトリ情報を移動（こうしないとエラーになる）
+    working_directory: ~/beauty-match
+    steps:
+      - checkout
 
-    steps: # 実行可能コマンドの集合
-      - checkout # ソースコードを作業ディレクトリにチェックアウトする特別なステップ
-
-      # Bundler のバージョンを指定します
-
-      - run:
-          name: Bundler を指定
-          command: bundle -v
-
-      # バンドルキャッシュを復元します
-      # 依存関係キャッシュについては https://circleci.com/docs/ja/2.0/caching/ をお読みください
-
+      # Restore bundle cache
       - restore_cache:
-          keys:
-            - rails-demo-bundle-v2-{{ checksum "Gemfile.lock" }}
-            - rails-demo-bundle-v2-
+          key: rails-demo-{{ checksum "Gemfile.lock" }}
 
-      - run: # Ruby の依存関係をインストールします
-          name: バンドルインストール
-          command: |
-            gem update --system
-            gem install bundler
+      # Bundle install dependencies
+      - run: bundle install --path vendor/bundle
 
-      # Ruby の依存関係のバンドルキャッシュを保存します
-
+      # Store bundle cache
       - save_cache:
-          key: rails-demo-bundle-v2-{{ checksum "Gemfile.lock" }}
+          key: rails-demo-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
 
+      # Database setup
+      # DBのセットアップを修正
       - run:
-          name: DB を待機
-          command: dockerize -wait tcp://localhost:5432 -timeout 1m
-
-      - run:
-          name: データベースをセットアップ
+          name: Database setup
           command: |
-            bin/rails db:create
-            bin/rails db:schema:load
+            bundle exec rake db:create db:schema:load --trace
+            bundle exec rake db:migrate
 
+      # run tests!
+      # RSpecの実行も修正
       - run:
-          name: RSpec を並列実行
+          name: run tests
           command: |
-            bundle exec rspec --profile 10 \
-                              --format RspecJunitFormatter \
-                              --out test_results/rspec.xml \
-                              --format progress \
-                              $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
+            mkdir /tmp/test-results
+            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
+            bundle exec rspec --format progress \
+                            --format RspecJunitFormatter \
+                            --out /tmp/test-results/rspec.xml \
+                            --format progress \
+                            "${TEST_FILES}"
 
-      # タイミング解析のテスト結果を保存します
-
-      - store_test_results: # テストサマリー (https://circleci.com/docs/ja/2.0/collect-test-data/) に表示するテスト結果をアップロードします
+      # Save test results for timing analysis
+      - store_test_results:
           path: test_results
-      # デプロイコンフィグの例については https://circleci.com/docs/ja/2.0/deployment-integrations/ を参照してください
