--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,8 @@ jobs:
       - run:
           name: Database setup
           command: |
+            gem update --system
+            gem install bundler
             bundle exec rake db:create db:schema:load --trace
             bundle exec rake db:migrate
 
