--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,8 @@ jobs:
       - run:
           name: Database setup
           command: |
-            - bundle install
-            - bundle exec rake db:create db:schema:load db:seed
+            bundle exec rake db:create db:schema:load --trace
+            bundle exec rake db:migrate
 
       # run tests!
       # RSpecの実行も修正
