--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,3 @@
-
-
 version: 2 # CircleCI 2.0 を使用します
 jobs: # ステップの集合
   build: # Workflows を使用しない実行では、エントリポイントとして `build` ジョブが必要
@@ -7,6 +5,7 @@ jobs: # ステップの集合
     docker: # Docker でステップを実行します
       - image: circleci/ruby:2.5.1 # このイメージをすべての `steps` が実行されるプライマリコンテナとして使用します
         environment: # プライマリコンテナの環境変数
+          BUNDLER_VERSION: 2.0.1
           BUNDLE_JOBS: 3
           BUNDLE_RETRY: 3
           BUNDLE_PATH: vendor/bundle
@@ -18,6 +17,8 @@ jobs: # ステップの集合
           POSTGRES_USER: circleci-demo-ruby
           POSTGRES_DB: beauty-match_test
           POSTGRES_PASSWORD: ""
+          working_directory: ~/beauty-match
+
     steps: # 実行可能コマンドの集合
       - checkout # ソースコードを作業ディレクトリにチェックアウトする特別なステップ
 
